[package]
name = "catalytics-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.7", features = ["cors"] }
dotenvy = "0.15.7"
tracing = "0.1.43"
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.17"
chrono = "0.4.42"
async-trait = "0.1.89"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
