[package]
name = "catalytics-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.7", features = ["cors"] }
dotenvy = "0.15.7"
tracing = "0.1.43"
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
urlencoding = "2.1.3"
ed25519-dalek = "2.2.0"
bs58 = "0.5.1"
base64 = "0.22.1"
rand = "0.9.2"
